<resources>


    <string name="app_name">SQRA</string>
    <string name="header_expand">Search Results for </string>
    <string name="recycle_header">Manufacturing Site List</string>
    <string name="header_title">Sales Quick Reference App</string>


    <string name="bread_head"> / Mfg site</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="region">Region</string>
    <string name="country">Country</string>
    <string name="sop">SOP</string>
    <string name="eop">EOP</string>


    <string name="line">..............................................</string>


    <string name="remember">Remember me</string>

    <string name="action_settings">Settings</string>

    <string name="hide">Show/Hide ActionBar when scroll</string>
    <string name="paralax">ActionBar Parallax Animations</string>

    <string name="adient">ADIENT</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="login">Login</string>
    <string name="signin">Log In</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <string name="hint_name">UserName</string>
    <string name="hint_email">Email</string>
    <string name="ok">OK</string>
    <string name="hint_password">Password</string>
    <string name="alert_title">Login Failed</string>
    <string name="err_login">Please enter valid Adient credentials</string>
    <string name="err_login_network">Please turn on data service</string>

    <string name="alert_connection_title">Server Connection Failed</string>
    <string name="err_connection">Please check internet connection</string>
    <string name="ws_fail">Server is not connected.</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="title_activity_start_up">StartUpActivity</string>
    <string name="title_activity_main_list_acitivity">MainListAcitivity</string>
    <string name="title_activity_list_detail">ListDetail</string>
    <string name="title_activity_fragment">FragmentActivity</string>


</resources>
